MainWindow almost done